tarea_programada_1/entrega_3/syntax_analysis/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> main_rule
Rule 1     main_rule -> route_identifiers main_rule
Rule 2     main_rule -> log_line main_rule
Rule 3     main_rule -> log_line
Rule 4     main_rule -> empty
Rule 5     log_line -> date PLUGIN_MSG DIR VAR_SET VAR_VAL
Rule 6     log_line -> date SBIN_IP_MSG IP IP_RNG
Rule 7     log_line -> date TUN_TAP_MSG
Rule 8     log_line -> date SBIN_IP_MSG IP PEER IP
Rule 9     log_line -> date SIGTERM_MSG
Rule 10    log_line -> date OPEN_VPN_MSG MONTH DAY YEAR
Rule 11    log_line -> date LIB_VER_MSG DAY MONTH YEAR LIB_VER_MSG
Rule 12    log_line -> date SYS_MSG
Rule 13    log_line -> date PLUGIN_MSG DIR SPECIAL_CHAR SPECIAL_CHAR DIR SPECIAL_CHAR FLAGS SPECIAL_CHAR VAR_SET VAR_VAL
Rule 14    log_line -> date CRYPTO_MSG
Rule 15    log_line -> date ROUTE_GATEWAY IP SLASH IP VAR_SET VAR_VAL VAR_SET VAR_VAL
Rule 16    log_line -> date SBIN_IP_MSG DAY DAY
Rule 17    log_line -> date SBIN_IP_MSG IP IP_RNG PEER IP
Rule 18    log_line -> date IP_PROTOCOL
Rule 19    log_line -> date CONN_MSG VAR_SET VAR_VAL VAR_SET VAR_VAL
Rule 20    log_line -> date TCP_MSG
Rule 21    log_line -> date SYS_MSG SPECIAL_CHAR VAR_SET VAR_VAL VAR_SET VAR_VAL
Rule 22    log_line -> date CONN_MSG VAR_SET IP VAR_SET VAR_VAL SPECIAL_CHAR VAR_SET VAR_VAL
Rule 23    log_line -> date IFCONFIG_END
Rule 24    log_line -> date COMPLETED
Rule 25    log_line -> date SYS_MSG VAR_SET VAR_VAL VAR_SET VAR_VAL
Rule 26    log_line -> date TCP_MSG IP PORT
Rule 27    log_line -> date IP PORT SYS_MSG FLAGS IP PORT SPECIAL_CHAR VAR_SET VAR_VAL
Rule 28    log_line -> date TCP_MSG IP PORT PLUGIN_MSG DIR VAR_SET VAR_VAL
Rule 29    log_line -> date IP PORT SYS_MSG slmtrp CN_SET
Rule 30    log_line -> date IP PORT CONN_MSG CRYPTO_MSG
Rule 31    log_line -> date IP PORT slmtrp PEER IP PORT
Rule 32    log_line -> date userid CONN_MSG POOL_RET VAR_SET IP SPECIAL_CHAR VAR_SET VAR_VAL
Rule 33    log_line -> date userid PLUGIN_MSG DIR VAR_SET VAR_VAL
Rule 34    log_line -> date userid CONN_MSG CONN_MSG DIR
Rule 35    log_line -> date userid CONN_MSG CONN_MSG IP SPECIAL_CHAR SPECIAL_CHAR id SLASH IP PORT
Rule 36    log_line -> date userid SYS_MSG id SLASH IP PORT COLON IP
Rule 37    log_line -> date userid SYS_MSG
Rule 38    log_line -> date userid SENT_CNT slmtrp COLON SPECIAL_CHAR routeid TOPOLOGY IP IP SPECIAL_CHAR PEER SPECIAL_CHAR CIPHER SPECIAL_CHAR VAR_SET VAR_VAL
Rule 39    log_line -> date userid CONN_MSG CIPHER
Rule 40    log_line -> date IP PORT PLUGIN_MSG DIR VAR_SET VAR_VAL
Rule 41    slmtrp -> SPECIAL_CHAR id SPECIAL_CHAR
Rule 42    slmtrp -> FLAGS
Rule 43    routeid -> route routeid
Rule 44    routeid -> route
Rule 45    route -> ROUTE_FLAG VPN_IP IP
Rule 46    route -> ROUTE_FLAG VPN_IP
Rule 47    userid -> id SLASH IP PORT
Rule 48    id -> CARNET
Rule 49    id -> PROF
Rule 50    date -> WEEK_DAY MONTH DAY CLOCK YEAR
Rule 51    date -> WEEK_DAY MONTH DAY CLOCK
Rule 52    route_identifiers -> ROUTE_HEADER key_value_list ROUTE_HEADER
Rule 53    key_value_list -> key_value_list key_value
Rule 54    key_value_list -> key_value
Rule 55    key_value -> VPN_IP IP
Rule 56    empty -> <empty>

Terminals, with rules where they appear

CARNET               : 48
CIPHER               : 38 39
CLOCK                : 50 51
CN_SET               : 29
COLON                : 36 38
COMPLETED            : 24
CONN_MSG             : 19 22 30 32 34 34 35 35 39
CRYPTO_MSG           : 14 30
DAY                  : 10 11 16 16 50 51
DIR                  : 5 13 13 28 33 34 40
FLAGS                : 13 27 42
IFCONFIG_END         : 23
IP                   : 6 8 8 15 15 17 17 22 26 27 27 28 29 30 31 31 32 35 35 36 36 38 38 40 45 47 55
IP_PROTOCOL          : 18
IP_RNG               : 6 17
LIB_VER_MSG          : 11 11
MONTH                : 10 11 50 51
OPEN_VPN_MSG         : 10
PEER                 : 8 17 31 38
PLUGIN_MSG           : 5 13 28 33 40
POOL_RET             : 32
PORT                 : 26 27 27 28 29 30 31 31 35 36 40 47
PROF                 : 49
ROUTE_FLAG           : 45 46
ROUTE_GATEWAY        : 15
ROUTE_HEADER         : 52 52
SBIN_IP_MSG          : 6 8 16 17
SENT_CNT             : 38
SIGTERM_MSG          : 9
SLASH                : 15 35 36 47
SPECIAL_CHAR         : 13 13 13 13 21 22 27 32 35 35 38 38 38 38 41 41
SYS_MSG              : 12 21 25 27 29 36 37
TCP_MSG              : 20 26 28
TOPOLOGY             : 38
TUN_TAP_MSG          : 7
VAR_SET              : 5 13 15 15 19 19 21 21 22 22 22 25 25 27 28 32 32 33 38 40
VAR_VAL              : 5 13 15 15 19 19 21 21 22 22 25 25 27 28 32 33 38 40
VPN_IP               : 45 46 55
WEEK_DAY             : 50 51
YEAR                 : 10 11 50
error                : 

Nonterminals, with rules where they appear

date                 : 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
empty                : 4
id                   : 35 36 41 47
key_value            : 53 54
key_value_list       : 52 53
log_line             : 2 3
main_rule            : 1 2 0
route                : 43 44
route_identifiers    : 1
routeid              : 38 43
slmtrp               : 29 31 38
userid               : 32 33 34 35 36 37 38 39

Parsing method: LALR

state 0

    (0) S' -> . main_rule
    (1) main_rule -> . route_identifiers main_rule
    (2) main_rule -> . log_line main_rule
    (3) main_rule -> . log_line
    (4) main_rule -> . empty
    (52) route_identifiers -> . ROUTE_HEADER key_value_list ROUTE_HEADER
    (5) log_line -> . date PLUGIN_MSG DIR VAR_SET VAR_VAL
    (6) log_line -> . date SBIN_IP_MSG IP IP_RNG
    (7) log_line -> . date TUN_TAP_MSG
    (8) log_line -> . date SBIN_IP_MSG IP PEER IP
    (9) log_line -> . date SIGTERM_MSG
    (10) log_line -> . date OPEN_VPN_MSG MONTH DAY YEAR
    (11) log_line -> . date LIB_VER_MSG DAY MONTH YEAR LIB_VER_MSG
    (12) log_line -> . date SYS_MSG
    (13) log_line -> . date PLUGIN_MSG DIR SPECIAL_CHAR SPECIAL_CHAR DIR SPECIAL_CHAR FLAGS SPECIAL_CHAR VAR_SET VAR_VAL
    (14) log_line -> . date CRYPTO_MSG
    (15) log_line -> . date ROUTE_GATEWAY IP SLASH IP VAR_SET VAR_VAL VAR_SET VAR_VAL
    (16) log_line -> . date SBIN_IP_MSG DAY DAY
    (17) log_line -> . date SBIN_IP_MSG IP IP_RNG PEER IP
    (18) log_line -> . date IP_PROTOCOL
    (19) log_line -> . date CONN_MSG VAR_SET VAR_VAL VAR_SET VAR_VAL
    (20) log_line -> . date TCP_MSG
    (21) log_line -> . date SYS_MSG SPECIAL_CHAR VAR_SET VAR_VAL VAR_SET VAR_VAL
    (22) log_line -> . date CONN_MSG VAR_SET IP VAR_SET VAR_VAL SPECIAL_CHAR VAR_SET VAR_VAL
    (23) log_line -> . date IFCONFIG_END
    (24) log_line -> . date COMPLETED
    (25) log_line -> . date SYS_MSG VAR_SET VAR_VAL VAR_SET VAR_VAL
    (26) log_line -> . date TCP_MSG IP PORT
    (27) log_line -> . date IP PORT SYS_MSG FLAGS IP PORT SPECIAL_CHAR VAR_SET VAR_VAL
    (28) log_line -> . date TCP_MSG IP PORT PLUGIN_MSG DIR VAR_SET VAR_VAL
    (29) log_line -> . date IP PORT SYS_MSG slmtrp CN_SET
    (30) log_line -> . date IP PORT CONN_MSG CRYPTO_MSG
    (31) log_line -> . date IP PORT slmtrp PEER IP PORT
    (32) log_line -> . date userid CONN_MSG POOL_RET VAR_SET IP SPECIAL_CHAR VAR_SET VAR_VAL
    (33) log_line -> . date userid PLUGIN_MSG DIR VAR_SET VAR_VAL
    (34) log_line -> . date userid CONN_MSG CONN_MSG DIR
    (35) log_line -> . date userid CONN_MSG CONN_MSG IP SPECIAL_CHAR SPECIAL_CHAR id SLASH IP PORT
    (36) log_line -> . date userid SYS_MSG id SLASH IP PORT COLON IP
    (37) log_line -> . date userid SYS_MSG
    (38) log_line -> . date userid SENT_CNT slmtrp COLON SPECIAL_CHAR routeid TOPOLOGY IP IP SPECIAL_CHAR PEER SPECIAL_CHAR CIPHER SPECIAL_CHAR VAR_SET VAR_VAL
    (39) log_line -> . date userid CONN_MSG CIPHER
    (40) log_line -> . date IP PORT PLUGIN_MSG DIR VAR_SET VAR_VAL
    (56) empty -> .
    (50) date -> . WEEK_DAY MONTH DAY CLOCK YEAR
    (51) date -> . WEEK_DAY MONTH DAY CLOCK

    ROUTE_HEADER    shift and go to state 5
    $end            reduce using rule 56 (empty -> .)
    WEEK_DAY        shift and go to state 7

    main_rule                      shift and go to state 1
    route_identifiers              shift and go to state 2
    log_line                       shift and go to state 3
    empty                          shift and go to state 4
    date                           shift and go to state 6

state 1

    (0) S' -> main_rule .



state 2

    (1) main_rule -> route_identifiers . main_rule
    (1) main_rule -> . route_identifiers main_rule
    (2) main_rule -> . log_line main_rule
    (3) main_rule -> . log_line
    (4) main_rule -> . empty
    (52) route_identifiers -> . ROUTE_HEADER key_value_list ROUTE_HEADER
    (5) log_line -> . date PLUGIN_MSG DIR VAR_SET VAR_VAL
    (6) log_line -> . date SBIN_IP_MSG IP IP_RNG
    (7) log_line -> . date TUN_TAP_MSG
    (8) log_line -> . date SBIN_IP_MSG IP PEER IP
    (9) log_line -> . date SIGTERM_MSG
    (10) log_line -> . date OPEN_VPN_MSG MONTH DAY YEAR
    (11) log_line -> . date LIB_VER_MSG DAY MONTH YEAR LIB_VER_MSG
    (12) log_line -> . date SYS_MSG
    (13) log_line -> . date PLUGIN_MSG DIR SPECIAL_CHAR SPECIAL_CHAR DIR SPECIAL_CHAR FLAGS SPECIAL_CHAR VAR_SET VAR_VAL
    (14) log_line -> . date CRYPTO_MSG
    (15) log_line -> . date ROUTE_GATEWAY IP SLASH IP VAR_SET VAR_VAL VAR_SET VAR_VAL
    (16) log_line -> . date SBIN_IP_MSG DAY DAY
    (17) log_line -> . date SBIN_IP_MSG IP IP_RNG PEER IP
    (18) log_line -> . date IP_PROTOCOL
    (19) log_line -> . date CONN_MSG VAR_SET VAR_VAL VAR_SET VAR_VAL
    (20) log_line -> . date TCP_MSG
    (21) log_line -> . date SYS_MSG SPECIAL_CHAR VAR_SET VAR_VAL VAR_SET VAR_VAL
    (22) log_line -> . date CONN_MSG VAR_SET IP VAR_SET VAR_VAL SPECIAL_CHAR VAR_SET VAR_VAL
    (23) log_line -> . date IFCONFIG_END
    (24) log_line -> . date COMPLETED
    (25) log_line -> . date SYS_MSG VAR_SET VAR_VAL VAR_SET VAR_VAL
    (26) log_line -> . date TCP_MSG IP PORT
    (27) log_line -> . date IP PORT SYS_MSG FLAGS IP PORT SPECIAL_CHAR VAR_SET VAR_VAL
    (28) log_line -> . date TCP_MSG IP PORT PLUGIN_MSG DIR VAR_SET VAR_VAL
    (29) log_line -> . date IP PORT SYS_MSG slmtrp CN_SET
    (30) log_line -> . date IP PORT CONN_MSG CRYPTO_MSG
    (31) log_line -> . date IP PORT slmtrp PEER IP PORT
    (32) log_line -> . date userid CONN_MSG POOL_RET VAR_SET IP SPECIAL_CHAR VAR_SET VAR_VAL
    (33) log_line -> . date userid PLUGIN_MSG DIR VAR_SET VAR_VAL
    (34) log_line -> . date userid CONN_MSG CONN_MSG DIR
    (35) log_line -> . date userid CONN_MSG CONN_MSG IP SPECIAL_CHAR SPECIAL_CHAR id SLASH IP PORT
    (36) log_line -> . date userid SYS_MSG id SLASH IP PORT COLON IP
    (37) log_line -> . date userid SYS_MSG
    (38) log_line -> . date userid SENT_CNT slmtrp COLON SPECIAL_CHAR routeid TOPOLOGY IP IP SPECIAL_CHAR PEER SPECIAL_CHAR CIPHER SPECIAL_CHAR VAR_SET VAR_VAL
    (39) log_line -> . date userid CONN_MSG CIPHER
    (40) log_line -> . date IP PORT PLUGIN_MSG DIR VAR_SET VAR_VAL
    (56) empty -> .
    (50) date -> . WEEK_DAY MONTH DAY CLOCK YEAR
    (51) date -> . WEEK_DAY MONTH DAY CLOCK

    ROUTE_HEADER    shift and go to state 5
    $end            reduce using rule 56 (empty -> .)
    WEEK_DAY        shift and go to state 7

    route_identifiers              shift and go to state 2
    main_rule                      shift and go to state 8
    log_line                       shift and go to state 3
    empty                          shift and go to state 4
    date                           shift and go to state 6

state 3

    (2) main_rule -> log_line . main_rule
    (3) main_rule -> log_line .
    (1) main_rule -> . route_identifiers main_rule
    (2) main_rule -> . log_line main_rule
    (3) main_rule -> . log_line
    (4) main_rule -> . empty
    (52) route_identifiers -> . ROUTE_HEADER key_value_list ROUTE_HEADER
    (5) log_line -> . date PLUGIN_MSG DIR VAR_SET VAR_VAL
    (6) log_line -> . date SBIN_IP_MSG IP IP_RNG
    (7) log_line -> . date TUN_TAP_MSG
    (8) log_line -> . date SBIN_IP_MSG IP PEER IP
    (9) log_line -> . date SIGTERM_MSG
    (10) log_line -> . date OPEN_VPN_MSG MONTH DAY YEAR
    (11) log_line -> . date LIB_VER_MSG DAY MONTH YEAR LIB_VER_MSG
    (12) log_line -> . date SYS_MSG
    (13) log_line -> . date PLUGIN_MSG DIR SPECIAL_CHAR SPECIAL_CHAR DIR SPECIAL_CHAR FLAGS SPECIAL_CHAR VAR_SET VAR_VAL
    (14) log_line -> . date CRYPTO_MSG
    (15) log_line -> . date ROUTE_GATEWAY IP SLASH IP VAR_SET VAR_VAL VAR_SET VAR_VAL
    (16) log_line -> . date SBIN_IP_MSG DAY DAY
    (17) log_line -> . date SBIN_IP_MSG IP IP_RNG PEER IP
    (18) log_line -> . date IP_PROTOCOL
    (19) log_line -> . date CONN_MSG VAR_SET VAR_VAL VAR_SET VAR_VAL
    (20) log_line -> . date TCP_MSG
    (21) log_line -> . date SYS_MSG SPECIAL_CHAR VAR_SET VAR_VAL VAR_SET VAR_VAL
    (22) log_line -> . date CONN_MSG VAR_SET IP VAR_SET VAR_VAL SPECIAL_CHAR VAR_SET VAR_VAL
    (23) log_line -> . date IFCONFIG_END
    (24) log_line -> . date COMPLETED
    (25) log_line -> . date SYS_MSG VAR_SET VAR_VAL VAR_SET VAR_VAL
    (26) log_line -> . date TCP_MSG IP PORT
    (27) log_line -> . date IP PORT SYS_MSG FLAGS IP PORT SPECIAL_CHAR VAR_SET VAR_VAL
    (28) log_line -> . date TCP_MSG IP PORT PLUGIN_MSG DIR VAR_SET VAR_VAL
    (29) log_line -> . date IP PORT SYS_MSG slmtrp CN_SET
    (30) log_line -> . date IP PORT CONN_MSG CRYPTO_MSG
    (31) log_line -> . date IP PORT slmtrp PEER IP PORT
    (32) log_line -> . date userid CONN_MSG POOL_RET VAR_SET IP SPECIAL_CHAR VAR_SET VAR_VAL
    (33) log_line -> . date userid PLUGIN_MSG DIR VAR_SET VAR_VAL
    (34) log_line -> . date userid CONN_MSG CONN_MSG DIR
    (35) log_line -> . date userid CONN_MSG CONN_MSG IP SPECIAL_CHAR SPECIAL_CHAR id SLASH IP PORT
    (36) log_line -> . date userid SYS_MSG id SLASH IP PORT COLON IP
    (37) log_line -> . date userid SYS_MSG
    (38) log_line -> . date userid SENT_CNT slmtrp COLON SPECIAL_CHAR routeid TOPOLOGY IP IP SPECIAL_CHAR PEER SPECIAL_CHAR CIPHER SPECIAL_CHAR VAR_SET VAR_VAL
    (39) log_line -> . date userid CONN_MSG CIPHER
    (40) log_line -> . date IP PORT PLUGIN_MSG DIR VAR_SET VAR_VAL
    (56) empty -> .
    (50) date -> . WEEK_DAY MONTH DAY CLOCK YEAR
    (51) date -> . WEEK_DAY MONTH DAY CLOCK

  ! reduce/reduce conflict for $end resolved using rule 3 (main_rule -> log_line .)
    $end            reduce using rule 3 (main_rule -> log_line .)
    ROUTE_HEADER    shift and go to state 5
    WEEK_DAY        shift and go to state 7

  ! $end            [ reduce using rule 56 (empty -> .) ]

    log_line                       shift and go to state 3
    main_rule                      shift and go to state 9
    route_identifiers              shift and go to state 2
    empty                          shift and go to state 4
    date                           shift and go to state 6

state 4

    (4) main_rule -> empty .

    $end            reduce using rule 4 (main_rule -> empty .)


state 5

    (52) route_identifiers -> ROUTE_HEADER . key_value_list ROUTE_HEADER
    (53) key_value_list -> . key_value_list key_value
    (54) key_value_list -> . key_value
    (55) key_value -> . VPN_IP IP

    VPN_IP          shift and go to state 12

    key_value_list                 shift and go to state 10
    key_value                      shift and go to state 11

state 6
